Client/UI/Web/src/main/resources/me/footlights/ui/web/style/footlights.css
@import url(http://fonts.googleapis.com/css?family=Abel|Gudea|Ubuntu+Mono);

html
{
	background: black;
	color: white;
	
	background-image: url('../images/seats.jpeg');
	background-repeat: no-repeat;
	background-position: bottom center;

	font-family: Gudea;
	font-weight: 400;
	margin: 0;
	padding: 0;
}

h1, h2 { color: rgb(230, 221, 35); }

#launcher, #status
{
	top: 70px;

	margin: 0;
	padding: .25em;

	background: rgba(230, 221, 35, 0.15);
	color: rgba(230, 221, 35, 0.6);
}

#launcher
{
	position: fixed;
	left: 0;

	width: 7em;
}

#status
{
	position: absolute;
	right: 0;

	width: 12em;
}

#status { background: rgba(230, 221, 35, 0.1); }

#launcher a { color: rgba(230, 221, 35, 0.75); }
#launcher a:hover { color: rgba(230, 221, 35, 1.0); }

#content
{
	position: absolute;
	top: 5em;

	margin-top: 0;
	margin-left: 7em;
	margin-right: 13em;
	padding: .25em;

	width: auto;

	color: #333;

	z-index: -3;
}


.timestamp
{
	color: rgba(230, 221, 35, 0.4);
	font-size: smaller;
	display: block;
}


#mainframe
{
	height: 90%;
	width: 100%;
	margin: 0;
	padding: 0;
}

.sandboxlabel
{
	color: orange;
	font-family: monospace;
	font-size: smaller;
}

.sandbox
{
	background: #ffc;
	border: 1px solid orange;
	margin: .5em;
	padding: .5em;
	position: relative;
}

.sandbox:before
{
	content: 'This is a sandbox for untrusted ECMAScript';
	display: block;

	border-bottom: 1px solid orange;
	color: orange;
	font-size: smaller;
}

.placeholder
{
	background: orange;
}

h1.main
{
	float: right;
	font-size: 150%;
	margin-bottom: .25em;
}

a
{
	color: #339;
	font-family: Abel;
	text-decoration: none;
}

a:followed
{
	color: #339;
}

.console
{
	font-family: "Ubuntu Mono";

	/* 50em translates to 80 columns... maybe it's ems of the container? */
	width: 50em;

	background-color: black;
	color: grey;
}

.ajaxContext
{
	font-family: monospace;
	font-size: smaller;
	font-weight: bold;
}

.ajaxContext:before
{
	content: 'Ajax Context: "';
}

.ajaxContext:after
{
	content: '"';
}

